Remove use of List.getFirst since it is, bafflingly, a very recent Java API addition